# pydantic-bff

./: CLAUDE.md  README.md  TODO.md  conftest.py  integration_test.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
fastbff/: __init__.py  app.py  app_test.py  batch.py  di.py  exceptions.py  reflection.py  router.py  router_test.py
fastbff/injections/: __init__.py  dependant.py  dependency_context_manager.py  dependency_provider.py  reflection.py  registry.py  resolver.py
fastbff/query_executor/: __init__.py  query_annotation.py  query_executor.py  query_executor_mock.py  query_executor_mock_test.py  query_executor_test.py
fastbff/sqlalchemy/: __init__.py  converter.py  converter_test.py
fastbff/transformer/: __init__.py  batcher.py  batcher_test.py  inheritance_test.py  inspection.py  pep563_test.py  registry.py  registry_test.py  types.py
integration_tests/: entrypoint_test.py  sample_app.py
src/pydantic_bff/: __init__.py  app.py  app_test.py  exceptions.py  router.py
src/pydantic_bff/injections/: __init__.py  dependant.py  dependencies_setup.py  dependency.py  dependency_context_manager.py  dependency_provider.py  reflection.py  registry.py  resolver.py  types.py  web_depends.py
src/pydantic_bff/query_executor/: __init__.py  mock.py  mock_test.py  query.py  query_annotation.py  query_cache.py  query_executor.py  query_executor_test.py  registry.py  registry_test.py
src/pydantic_bff/transformer/: __init__.py  batcher.py  batcher_test.py  builder.py  builder_test.py  decorators.py  decorators_test.py  inspection.py  registry.py  registry_test.py  types.py
